--- a/logIn/logIN.css
+++ b/logIn/logIN.css
@@ -104,15 +104,12 @@ a{
     margin: 60px;
     font-size: 0.8em;
 }
-/* Existing CSS styles remain the same */
+
 
 /* Style for Modal */
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
@@ -125,6 +122,9 @@ a{
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
+    max-width: 400px; /* Adjust the maximum width as needed */
+    border-radius: 5px;
+    text-align: center; /* Center content */
     width: 80%; /* Could be more or less, depending on screen size */
 }
 
@@ -136,13 +136,5 @@ a{
     font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
 
-.modal{
-    text-align: center;
-}
+
