--- a/semundjet/css.css
+++ b/semundjet/css.css
@@ -1,17 +1,13 @@
-body{
+body{  /*background color of the body*/
   background-color: hwb(0 96% 2%);
-  /*background-image: url(jjj.jpg);
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;*/
 }
 .collapse {
   overflow: hidden;
   transition: 0.4s cubic-bezier(0.4, 0, 0.2, 1);
   transition-property: opacity, height;
-  will-change: opacity, contents;
+  will-change: opacity, contents; /*informon browserin per elementet we do te ndryshohen*/
 }
-.collapse:not(.is-active) {
+.collapse:not(.is-active) { /*ndryshohet pamja e el. qe kan klasen .collapse por jo is-active*/
   height: 0;
   opacity: 0;
 }
@@ -20,42 +16,35 @@ body{
   border-radius: 4px;
   overflow: hidden; /* Hide overflow content */
 }
-.hr{
+.hr{ 
   margin-top: 40px;
   margin-bottom: 40px;
 }
 
 .box {
-  flex: 1;
+  flex: 1; /*ben kutite flexible brenda container */
   padding: 10px;
   text-align: center;
   border-right: 1px solid transparent; /* Transparent right border */
   margin-right: 10px; /* Add space between boxes */
   box-shadow: inset 0px 2px 2px 0px rgba(177, 126, 126, 0.14), inset 0px 3px 1px -2px rgba(0, 0, 0, 0.2), inset 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
 }
-
-/* Adjust as needed */
 .box:last-child {
   border-right: none; /* Remove right border for the last box */
   margin-right: 0; /* Remove space for the last box */
 }
-
-/* Adjust styles for h3 and p */
 .box h3 {
   margin-top: 0;
   font-size: 18px;
 }
-
 .box p {
   margin-bottom: 0;
 }
-
-
 .accordion {
   --background: #f3f3f39d;
-  --border-radius: 12px;
-  border-radius: var(--border-radius);
-  background: var(--background);
+  --border-radius: 12px; /*rrezja e kufijve*/
+  border-radius: var(--border-radius);/*aplikon rrezen*/
+  background: var(--background); /*aplikon ngjyren*/
   box-shadow: 0 2px 6px rgba(205, 22, 22, 0.075);
   border: 1px solid #d9d9d9;
   width: 80%; /* Added width to center the accordion */
@@ -79,18 +68,18 @@ body{
   margin-bottom: -1px;
 }
 .accordion .card:not(:last-child):not(.is-active) {
-  border-bottom-color: transparent;
+  border-bottom-color: transparent; /*ben ngjyren e kufirit transparent*/
 }
 .accordion .card.is-active {
   background: #fff;
   border-radius: var(--border-radius);
 }
 .accordion .card.is-active + .card {
-  border-top-color: transparent;
-}
+  border-top-color: transparent; /*ben ngjyren e kufirit transparent pas kartes aktive*/
+} 
 .accordion .card__title {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-between; /*ndan elementet ne menyre te barabarte*/
   align-items: center;
   min-height: 3.5rem;
   margin: 0;
@@ -158,6 +147,7 @@ a,
 [data-toggle] {
   cursor: pointer;
 }
+/* specifikimet per footer*/
 footer {
   background-color: #333;
   color: #b68d8d;
@@ -166,11 +156,17 @@ footer {
 }
 
 .footer-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  max-width: 1200px;
-  margin: 0 auto;
+  display: flex; /* Displays the footer container as flex */
+  flex-wrap: wrap; /* Allows items to wrap */
+  justify-content: space-between; /* Aligns items evenly along the main axis */
+  max-width: 1200px; /* Sets maximum width */
+  margin: 0 auto; /* Centers the footer container */
+}
+
+@media screen and (max-width: 768px) {
+  .detailed .detailed-footer {
+      width: calc(50% - 40px);
+  }
 }
 
 .detailed-footer {
