kjo eshte faqja e pare

--- a/common/navbar-footer.css
+++ b/common/navbar-footer.css
@@ -6,7 +6,7 @@
     color: #6d5b5b;
     background-color: #837272;
     padding: 10px 50px;
-    border-radius: 10px;
+    /*border-radius: 10px;*/
     margin-top: 2px;
 
 }
