--- a/Nutricion/nutricion.css
+++ b/Nutricion/nutricion.css
@@ -5,37 +5,38 @@ body {
 }
 
 main {
-    text-align: center; /* Aligns text center within main */
-    padding: 5rem;
+    text-align: center; /* pozicionimi i tekstit */
     background-color: #f5f5f5;
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Centers items horizontally */
+    display: flex;   /*fleksibitet per elementevt*/
+    flex-direction: column; /*vendosja e elementeve ne kolone */
+    align-items: center; /* pozicionim ne center  */
+    padding: 20px; /*largesia nga kufiri*/
+
 }
 
 
 .card .container a {
-    text-decoration: none; /* Remove underline */
-    color: rgba(62, 32, 32, 0.95); /* Set text color for the link */
+    text-decoration: none; /* ne kete rast heq underline */
+    color: rgba(62, 32, 32, 0.95); /* ngjyra linkut */
 }
 
 .the-content{
-    text-align: center;
+    text-align: center; /*kontenti ne qender*/
 }
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /*hija (ngjyra)*/
     transition: 0.5s; /* ndryshimi ne card me sa sec */
     color: rgba(71, 45, 45, 0.96);
     background-color:  rgb(163, 144, 144);
-    border-radius: 45px;
+    border-radius: 45px; /*forma e borderit */
     width: 500px;
-    margin: 30px;
+    margin: 30px;  /*largesia nga kufiri i ekranit */
     padding: 10px;
     border: 3px solid rgb(151, 130, 130);
 
 }
 .card:hover {
-    box-shadow: 0 10px 16px 0 rgba(4, 1, 0, 0.54);
+    box-shadow: 0 10px 16px 0 rgba(4, 1, 0, 0.54); /* ndryshim ngjyre kur vendos mousin siper*/
 }
 
 .container {
@@ -87,9 +88,6 @@ div.card:hover{
     box-shadow: 0 10px 16px 0 rgba(90, 65, 65, 0.6);
 }
 
-main {
-    padding: 20px;
-}
 
 section {
     margin-bottom: 50px;
@@ -114,8 +112,7 @@ li {
 img{
     width: 100px; /* Adjust the width as needed */
     height: auto; /* Automatically adjust height to maintain aspect ratio */
-    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5); /* Adds a subtle shadow */
-    opacity: 0.7; /* Adjust the opacity value (0 to 1) as needed */
+    opacity: 0.7; /* tejdukshemria e fotos */
     position: relative;
     display: inline-block;
 
@@ -155,7 +152,7 @@ img{
 }
 
 .top-button {
-    text-decoration: none; /* Remove underline */
+    text-decoration: none;
     position: fixed;
     bottom: 30px;
     right: 30px;
@@ -190,6 +187,6 @@ img{
 }
 
 #navbar {
-    width: 95%; /* Set the width to 100% to span the entire width of its container */
+    width: 95%;
 }
 
